<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_label">Введите город</string>
    <string name="show_btn">Показать погоду</string>
    <string name="edit_text_hint">Москва</string>
    <string name="copyright">Developed by Zolnikov Aleksey</string>
    <string name="current_temp">Текущая температура</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">Температура</string>
</resources>
